--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Yaswanth Jagilanka</title>
+  <title>Srihari Gopinath Thota</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -59,7 +59,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Yaswanth Jagilanka</h1>
+      <h1>Srihari Gopinath Thota</h1>
       <p>I'm a <span class="typed" data-typed-items="Software Developer, Cloud Architect"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/yaswanthjagilanka/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
